--- a/ccg.html
+++ b/ccg.html
@@ -416,7 +416,7 @@
 					</script>
 				<div class="dtbj3">
 					<a href="navigation.html" style="cursor: pointer"><img id="zy" alt="" src="images/zy.png" width="54px"></a>
-					<a href="cyx.html" style="cursor: pointer"><img id="cyx" alt="" src="images/cyx.png" width="120px"></a>
+					<a href="game.html" style="cursor: pointer"><img id="cyx" alt="" src="images/cyx.png" width="120px"></a>
 				</div>
 			</form>
 		</div>
