--- a/ddxc.html
+++ b/ddxc.html
@@ -365,7 +365,7 @@
 <body>
 	<div id="content">
 		<div class="biaoti"><img alt="" src="images/D.png" width="90px"></div>
-		<div class="dianji1"><img alt="" src="images/Ddj.png" width="650px"></div>
+		<div class="dianji1"><img alt="" src="images/ddj.png" width="650px"></div>
 		<div class="bj1"><img alt="" src="images/back.png" width="260px"></div>
 		<div class="bj2"><img alt="" src="images/back.png" width="260px"></div>
 		<div class="bj3"><img alt="" src="images/back.png" width="260px"></div>
