--- a/hzmc.html
+++ b/hzmc.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+<embed src="bgm/初夏雨後 - 谢明祥.mp3" hidden="true" autostart="true" loop="true">
 <meta charset="UTF-8">
 <title>杭州名菜</title>
 	<style type="text/css">
