--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 <meta charset="UTF-8">
 <title>杭州吃文化</title>
 	<style type="text/css">
+		audio{
+         width: 120px;
+    height: 30px;
+    position: absolute;
+    top: 30px;
+    left: 1200px;
+     }
 		body,div{
 			margin: 0;
 			padding: 0;
@@ -41,6 +48,7 @@
 
 <body>
 	<div id="content">
+	<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/初夏雨後 - 谢明祥.mp3"></audio>	
 	<div class="ksxx"><a href="navigation.html"><img alt="" src="images/ksxx.png" width="200px"></a></div>
 	</div>
 </body>
