--- a/navigation.html
+++ b/navigation.html
@@ -4,6 +4,13 @@
 <meta charset="UTF-8">
 <title>吃讲堂</title>
 	<style type="text/css">
+		audio{
+         width: 120px;
+    height: 30px;
+    position: absolute;
+    top: 30px;
+    left: 1200px;
+     }
 		body,div{
 			margin: 0;
 			padding: 0;
@@ -68,6 +75,7 @@
 
 <body>
 	<div id="content">
+	<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/初夏雨後 - 谢明祥.mp3"></audio>
     <div class="daoyu"><img alt="" src="images/dy1.png" width="450px"></div>
 	<div class="cjt"><a href="lecture.html"><img alt="" src="images/cjt.png" width="200px"></a></div>
 	<div class="ccg"><a href="ccg.html"><img alt="" src="images/ccg.png" width="200px"></a></div>
