--- a/hzmc.html
+++ b/hzmc.html
@@ -1,10 +1,16 @@
 <!doctype html>
 <html>
 <head>
-<embed src="bgm/初夏雨後 - 谢明祥.mp3" hidden="true" autostart="true" loop="true">
 <meta charset="UTF-8">
 <title>杭州名菜</title>
 	<style type="text/css">
+		audio{
+         width: 120px;
+    height: 30px;
+    position: absolute;
+    top: 30px;
+    left: 1200px;
+     }
 		body,div{
 			margin: 0;
 			padding: 0;
@@ -365,6 +371,7 @@
 
 <body>
 	<div id="content">
+		<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/初夏雨後 - 谢明祥.mp3"></audio>
 		<div class="biaoti"><img alt="" src="images/H.png" width="300px"></div>
 		<div class="dianji1"><img alt="" src="images/dj1.jpg" width="650px"></div>
 		<div class="bj1"><img alt="" src="images/back.png" width="260px"></div>
