--- a/ctgd.html
+++ b/ctgd.html
@@ -4,6 +4,13 @@
 <meta charset="UTF-8">
 <title>传统糕点</title>
 	<style type="text/css">
+		audio{
+         width: 120px;
+    height: 30px;
+    position: absolute;
+    top: 30px;
+    left: 1200px;
+     }
 		body,div{
 			margin: 0;
 			padding: 0;
@@ -364,6 +371,7 @@
 
 <body>
 	<div id="content">
+		<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/初夏雨後 - 谢明祥.mp3"></audio>
 		<div class="biaoti"><img alt="" src="images/C.png" width="160px"></div>
 		<div class="dianji1"><img alt="" src="images/dj2.png" width="650px"></div>
 		<div class="bj1"><img alt="" src="images/back.png" width="260px"></div>
