--- a/ccg.html
+++ b/ccg.html
@@ -4,6 +4,13 @@
 <meta charset="UTF-8">
 <title>吃闯关</title>
 <style type="text/css">
+	audio{
+         width: 120px;
+    height: 30px;
+    position: absolute;
+    top: 30px;
+    left: 1200px;
+     }
 	body,div{
 			margin: 0;
 			padding: 0;
@@ -200,6 +207,7 @@
 
 <body>
 	<div id="content">
+		<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/初夏雨後 - 谢明祥.mp3"></audio>
 		<div class="cgxt"><img alt="" src="images/cg.png" width="180px"></div>
 		<div class="dtbj1" id="dv"><a href="#" id="btn" style="cursor: pointer"><img alt="" src="images/dtan.png" width="90px"></a></div>
 	
