--- a/game.html
+++ b/game.html
@@ -4,6 +4,13 @@
 <meta charset="UTF-8">
 <title>吃游戏</title>
 <style type="text/css">
+	        audio{
+         width: 120px;
+    height: 30px;
+    position: absolute;
+    top: 30px;
+    left: 1200px;
+     }
 		body,div{
 			margin: 0;
 			padding: 0;
@@ -137,6 +144,7 @@
 
 <body>
 	<div id="content">
+	<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/初夏雨後 - 谢明祥.mp3"></audio>
 	<div class="jtxx"><img alt="" src="images/yxyl.png" width="180px"></div>
 	<div class="btm">
 		<div class="snake"><a href="snake.html"><img alt="" src="images/snake.png" width="260px" height="240px"></a></div>
