--- a/pyp.html
+++ b/pyp.html
@@ -4,6 +4,13 @@
 <meta charset="UTF-8">
 <title>拼一拼</title>
 <style type="text/css">
+	        audio{
+         width: 120px;
+    height: 30px;
+    position: absolute;
+    top: 30px;
+    left: 1200px;
+     }
 		body,div{
 			margin: 0;
 			padding: 0;
@@ -103,6 +110,7 @@
 
 <body>
 	<div id="content">
+	<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/初夏雨後 - 谢明祥.mp3"></audio>
 	<div class="jtxx"><img alt="" src="images/pp.png" width="150px"></div>
 	<div class="ptbj">
 		<div><img class="sm" alt="" src="images/sm2.png" height="120px"></div>
