--- a/snake.html
+++ b/snake.html
@@ -4,6 +4,14 @@
 <meta charset="UTF-8">
 <title>贪吃蛇</title>
 <style type="text/css">
+	        audio{
+         width: 120px;
+    height: 30px;
+    position: absolute;
+    top: 30px;
+    left: 1200px;
+     }
+	        
 		body,div{
 			margin: 0;
 			padding: 0;
@@ -122,6 +130,7 @@
 
 <body>
 <div id="content">
+	<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/初夏雨後 - 谢明祥.mp3"></audio>
 	<div class="jtxx"><img alt="" src="images/tan.png" width="150px"></div>
 	<div class="ptbj">
 		<div class="jj"><img alt="" src="images/sm1.png" width="280px"></div>
