--- a/ccg.html
+++ b/ccg.html
@@ -207,7 +207,7 @@
 
 <body>
 	<div id="content">
-		<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/初夏雨後 - 谢明祥.mp3"></audio>
+		<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/bgm.mp3"></audio>
 		<div class="cgxt"><img alt="" src="images/cg.png" width="180px"></div>
 		<div class="dtbj1" id="dv"><a href="#" id="btn" style="cursor: pointer"><img alt="" src="images/dtan.png" width="90px"></a></div>
 	
