--- a/game.html
+++ b/game.html
@@ -144,7 +144,7 @@
 
 <body>
 	<div id="content">
-	<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/初夏雨後 - 谢明祥.mp3"></audio>
+	<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/bgm.mp3"></audio>
 	<div class="jtxx"><img alt="" src="images/yxyl.png" width="180px"></div>
 	<div class="btm">
 		<div class="snake"><a href="snake.html"><img alt="" src="images/snake.png" width="260px" height="240px"></a></div>
