--- a/hzmc.html
+++ b/hzmc.html
@@ -371,7 +371,7 @@
 
 <body>
 	<div id="content">
-		<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/初夏雨後 - 谢明祥.mp3"></audio>
+		<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/bgm.mp3"></audio>
 		<div class="biaoti"><img alt="" src="images/H.png" width="300px"></div>
 		<div class="dianji1"><img alt="" src="images/dj1.jpg" width="650px"></div>
 		<div class="bj1"><img alt="" src="images/back.png" width="260px"></div>
