--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <body>
 	<div id="content">
-	<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/初夏雨後 - 谢明祥.mp3"></audio>	
+	<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/bgm.mp3"></audio>	
 	<div class="ksxx"><a href="navigation.html"><img alt="" src="images/ksxx.png" width="200px"></a></div>
 	</div>
 </body>
