--- a/lecture.html
+++ b/lecture.html
@@ -98,7 +98,7 @@
 
 <body>
 	<div id="content">
-	<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/初夏雨後 - 谢明祥.mp3"></audio>
+	<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/bgm.mp3"></audio>
 	<div class="jtxx"><img alt="" src="images/jtxx.png" width="180px"></div>
 	<div class="daoyu"><img alt="" src="images/dy2.png" width="450px"></div>
 	<div class="btm">
