--- a/navigation.html
+++ b/navigation.html
@@ -75,7 +75,7 @@
 
 <body>
 	<div id="content">
-	<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/初夏雨後 - 谢明祥.mp3"></audio>
+	<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/bgm.mp3"></audio>
     <div class="daoyu"><img alt="" src="images/dy1.png" width="450px"></div>
 	<div class="cjt"><a href="lecture.html"><img alt="" src="images/cjt.png" width="200px"></a></div>
 	<div class="ccg"><a href="ccg.html"><img alt="" src="images/ccg.png" width="200px"></a></div>
