--- a/pyp.html
+++ b/pyp.html
@@ -110,7 +110,7 @@
 
 <body>
 	<div id="content">
-	<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/初夏雨後 - 谢明祥.mp3"></audio>
+	<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/bgm.mp3"></audio>
 	<div class="jtxx"><img alt="" src="images/pp.png" width="150px"></div>
 	<div class="ptbj">
 		<div><img class="sm" alt="" src="images/sm2.png" height="120px"></div>
