--- a/snake.html
+++ b/snake.html
@@ -130,7 +130,7 @@
 
 <body>
 <div id="content">
-	<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/初夏雨後 - 谢明祥.mp3"></audio>
+	<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls" src="bgm/bgm.mp3"></audio>
 	<div class="jtxx"><img alt="" src="images/tan.png" width="150px"></div>
 	<div class="ptbj">
 		<div class="jj"><img alt="" src="images/sm1.png" width="280px"></div>
