--- a/ctgd.html
+++ b/ctgd.html
@@ -190,9 +190,24 @@
 			text-indent: 36px;
 			text-align: left;
 			font-size: 18px;
-			overflow-x: auto;
-			overflow-y: auto;
+			overflow:auto;
 		}
+        /*滚动条样式*/
+        .textbox1::-webkit-scrollbar {
+            width: 4px;    
+            /*height: 4px;*/
+        }
+        .textbox1::-webkit-scrollbar-thumb {
+            border-radius: 10px;
+            -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+            background: rgba(0,0,0,0.2);
+        }
+        .textbox1::-webkit-scrollbar-track {
+            -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+            border-radius: 0;
+            background: rgba(0,0,0,0.1);
+
+        }
 		.textbox2{
 			position: absolute;
 			width: 300px;
@@ -201,9 +216,23 @@
 			text-indent: 36px;
 			text-align: left;
 			font-size: 18px;
-			overflow-x: auto;
-			overflow-y: auto;
+			overflow:auto;
 		}
+		 .textbox2::-webkit-scrollbar {
+            width: 4px;    
+            /*height: 4px;*/
+        }
+        .textbox2::-webkit-scrollbar-thumb {
+            border-radius: 10px;
+            -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+            background: rgba(0,0,0,0.2);
+        }
+        .textbox2::-webkit-scrollbar-track {
+            -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+            border-radius: 0;
+            background: rgba(0,0,0,0.1);
+
+        }
 		button{
 			position: absolute;
 			border-radius: 8px;
