--- a/ccg.html
+++ b/ccg.html
@@ -52,7 +52,7 @@
 		left: 305px;
 	}
 	.dt1{
-		position: fixed;
+		position: absolute;
 		background-image: url( images/dtbj.png);
 		background-size: 100%; 
 	    background-repeat: no-repeat;
@@ -63,7 +63,7 @@
 		display: none;
 	}
 	.dt2{
-		position: fixed;
+		position: absolute;
 		background-image: url( images/dtbj.png);
 		background-size: 100%; 
 	    background-repeat: no-repeat;
@@ -74,7 +74,7 @@
 		display: none;
 	}
 	.dt3{
-		position: fixed;
+		position: absolute;
 		background-image: url( images/dtbj.png);
 		background-size: 100%; 
 	    background-repeat: no-repeat;
@@ -85,7 +85,7 @@
 		display: none;
 	}
 	.dt4{
-		position: fixed;
+		position: absolute;
 		background-image: url( images/dtbj.png);
 		background-size: 100%; 
 	    background-repeat: no-repeat;
@@ -96,7 +96,7 @@
 		display: none;
 	}
 	.dt5{
-		position: fixed;
+		position: absolute;
 		background-image: url( images/dtbj.png);
 		background-size: 100%; 
 	    background-repeat: no-repeat;
