--- a/ddxc.html
+++ b/ddxc.html
@@ -244,7 +244,7 @@
 			border: 0px;
 		}
 		.dt1{
-		position: fixed;
+		position: absolute;
 		background-image: url( images/dtbj.png);
 		background-size: 100%; 
 	    background-repeat: no-repeat;
@@ -255,7 +255,7 @@
 		display: none;
 	}
 	.dt2{
-		position: fixed;
+		position: absolute;
 		background-image: url( images/dtbj.png);
 		background-size: 100%; 
 	    background-repeat: no-repeat;
@@ -266,7 +266,7 @@
 		display: none;
 	}
 	.dt3{
-		position: fixed;
+		position: absolute;
 		background-image: url( images/dtbj.png);
 		background-size: 100%; 
 	    background-repeat: no-repeat;
@@ -277,7 +277,7 @@
 		display: none;
 	}
 	.dt4{
-		position: fixed;
+		position: absolute;
 		background-image: url( images/dtbj.png);
 		background-size: 100%; 
 	    background-repeat: no-repeat;
@@ -288,7 +288,7 @@
 		display: none;
 	}
 	.dt5{
-		position: fixed;
+		position: absolute;
 		background-image: url( images/dtbj.png);
 		background-size: 100%; 
 	    background-repeat: no-repeat;
