--- a/ddxc.html
+++ b/ddxc.html
@@ -266,7 +266,7 @@
 		display: none;
 	}
 	.dt3{
-		position: absolute;
+		position: fixed;
 		background-image: url( images/dtbj.png);
 		background-size: 100%; 
 	    background-repeat: no-repeat;
